# autopilot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  main.cpp
.github/workflows/: ci.yml
docs/: PHASE_1_SPEC.md  PHASE_2_SPEC.md  PHASE_3_SPEC.md  PHASE_4_1_FIX.md  PHASE_4_1_SPEC.md  PHASE_4_SPEC.md  PHASE_5_SPEC.md  PHASE_6_SPEC.md  PLAN.md  TEST_INVENTORY.md
include/autopilot/agents/: agent_launcher.hpp
include/autopilot/commands/: cmd_add.hpp  cmd_briefing.hpp  cmd_delete.hpp  cmd_init.hpp  cmd_kill.hpp  cmd_list.hpp  cmd_new.hpp  cmd_rm.hpp  cmd_start.hpp  cmd_task_add.hpp  cmd_update.hpp  cmd_workflow.hpp  delete_ui.hpp  template_sync.hpp
include/autopilot/platform/: home_dir.hpp
include/autopilot/projects/: project_paths.hpp  project_store.hpp  todo_task_selector.hpp  todo_task_sync.hpp
include/autopilot/runtime/: alert_store.hpp  event_log.hpp  json_utils.hpp  lock_manager.hpp  run_result_classifier.hpp  task_state_store.hpp  workflow.hpp
scripts/: format_src.sh
src/: main.cpp
src/agents/: agent_launcher.cpp
src/commands/: cmd_add.cpp  cmd_briefing.cpp  cmd_delete.cpp  cmd_init.cpp  cmd_kill.cpp  cmd_list.cpp  cmd_new.cpp  cmd_rm.cpp  cmd_start.cpp  cmd_task_add.cpp  cmd_update.cpp  cmd_workflow_review.cpp  cmd_workflow_run.cpp  cmd_workflow_task.cpp  delete_ui.cpp  template_sync.cpp
src/platform/: home_dir.cpp
src/projects/: project_paths.cpp  project_store.cpp  todo_task_selector.cpp  todo_task_sync.cpp
src/runtime/: alert_store.cpp  event_log.cpp  json_utils.cpp  lock_manager.cpp  run_result_classifier.cpp  task_state_store.cpp  workflow.cpp  workflow_process.cpp  workflow_serialization.cpp  workflow_start.cpp  workflow_start_review.cpp
templates/autopilot/: CLAUDE.md  config.toml
templates/autopilot/.claude/skills/ap-briefing/agents/: openai.yaml
templates/autopilot/.claude/skills/ap-self-recognition/: SKILL.md
templates/autopilot/.claude/skills/ap-self-recognition/agents/: openai.yaml
templates/autopilot/.claude/skills/briefing/: SKILL.md
templates/autopilot/.claude/skills/briefing/agents/: openai.yaml
templates/autopilot/.claude/skills/self-recognition/: SKILL.md
templates/autopilot/.claude/skills/self-recognition/agents/: openai.yaml
templates/autopilot/skills/ap-briefing/: SKILL.md
templates/autopilot/skills/ap-self-recognition/: SKILL.md
tests/: run_all_tests.sh  test_ap_add.sh  test_ap_briefing.sh  test_ap_delete.sh  test_ap_init.sh  test_ap_kill.sh  test_ap_list.sh  test_ap_new.sh  test_ap_rm.sh  test_ap_start.sh  test_ap_task_add.sh  test_ap_update.sh  test_ap_workflow.sh
